@@ -11,14 +11,12 @@ import hudson.plugins.git.IndexEntry;
 import hudson.plugins.git.Revision;
 import java.io.File;
 import java.io.IOException;
-import java.io.FileNotFoundException;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.io.StringWriter;
-import java.io.UnsupportedEncodingException;
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.InvalidPathException;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -36,21 +34,29 @@ import java.util.UUID;
 import org.apache.commons.io.FileUtils;
 
 import org.eclipse.jgit.api.errors.JGitInternalException;
+import org.eclipse.jgit.internal.storage.file.FileRepository;
 import org.eclipse.jgit.lib.ObjectId;
 import org.eclipse.jgit.lib.PersonIdent;
+import org.eclipse.jgit.lib.StoredConfig;
 import org.eclipse.jgit.transport.RefSpec;
 import org.eclipse.jgit.transport.URIish;
 import org.eclipse.jgit.lib.Constants;
 
+import static org.hamcrest.io.FileMatchers.*;
+import static org.hamcrest.MatcherAssert.*;
 import static org.hamcrest.Matchers.*;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.fail;
 import org.junit.AfterClass;
-import static org.junit.Assert.*;
-import static org.junit.Assume.*;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
 import org.junit.rules.TemporaryFolder;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
@@ -90,17 +96,18 @@ public class GitClientTest {
     /* Instance of object under test */
     private GitClient gitClient = null;
 
+    /* Instance of object of another test class*/
+    private CliGitAPIImplTest cliGitAPIImplTest = new CliGitAPIImplTest();
+
     /* Capabilities of command line git in current environment */
     private final boolean CLI_GIT_HAS_GIT_LFS;
+    private final boolean CLI_GIT_HAS_GIT_LFS_CONFIGURED;
     private final boolean CLI_GIT_REPORTS_DETACHED_SHA1;
-    private final boolean CLI_GIT_SUPPORTS_SUBMODULES;
     private final boolean CLI_GIT_SUPPORTS_SUBMODULE_DEINIT;
     private final boolean CLI_GIT_SUPPORTS_SUBMODULE_RENAME;
     private final boolean CLI_GIT_SUPPORTS_SYMREF;
     private final boolean CLI_GIT_SUPPORTS_REV_LIST_NO_WALK;
-
-    @Rule
-    public ExpectedException thrown = ExpectedException.none();
+    private final boolean LFS_SUPPORTS_SPARSE_CHECKOUT;
 
     @Rule
     public TemporaryFolder tempFolder = new TemporaryFolder();
@@ -116,23 +123,41 @@ public class GitClientTest {
         } else {
             cliGitClient = (CliGitAPIImpl) Git.with(TaskListener.NULL, new EnvVars()).in(srcRepoDir).using("git").getClient();
         }
-        CLI_GIT_REPORTS_DETACHED_SHA1 = cliGitClient.isAtLeastVersion(1, 8, 0, 0);
-        CLI_GIT_SUPPORTS_SUBMODULES = cliGitClient.isAtLeastVersion(1, 8, 0, 0);
+        CLI_GIT_REPORTS_DETACHED_SHA1 = true; // Included in CLI git 1.8.0 and later
         CLI_GIT_SUPPORTS_SUBMODULE_DEINIT = cliGitClient.isAtLeastVersion(1, 9, 0, 0);
         CLI_GIT_SUPPORTS_SUBMODULE_RENAME = cliGitClient.isAtLeastVersion(1, 9, 0, 0);
         CLI_GIT_SUPPORTS_SYMREF = cliGitClient.isAtLeastVersion(2, 8, 0, 0);
-        CLI_GIT_SUPPORTS_REV_LIST_NO_WALK = cliGitClient.isAtLeastVersion(1, 5, 3, 0);
+        CLI_GIT_SUPPORTS_REV_LIST_NO_WALK = true; // Included in CLI git 1.8.0 and later
 
         boolean gitLFSExists;
+        boolean gitSparseCheckoutWithLFS;
         try {
             // If git-lfs is installed then the version string should look like this:
             // git-lfs/1.5.6 (GitHub; linux amd64; go 1.7.4)
-            gitLFSExists = cliGitClient.launchCommand("lfs", "version").startsWith("git-lfs");
+            String lfsVersionOutput = cliGitClient.launchCommand("lfs", "version").trim();
+            gitLFSExists = lfsVersionOutput.startsWith("git-lfs");
+            gitSparseCheckoutWithLFS = lfsVersionOutput.matches("git-lfs/[3-9][.].*|git-lfs/2[.]1[0-9].*|git-lfs/2[.][89].*");
+            // Avoid test failures on ci.jenkins.io agents by calling `git lfs install`
+            // Intentionally ignores the return value, assumes that failure will throw an exception
+            // and disable the git LFS tests
+            cliGitClient.launchCommand("lfs", "install");
         } catch (GitException exception) {
             // This is expected when git-lfs is not installed.
             gitLFSExists = false;
+            gitSparseCheckoutWithLFS = false;
         }
         CLI_GIT_HAS_GIT_LFS = gitLFSExists;
+
+        boolean gitLFSConfigured;
+        try {
+            // If git-lfs is configured then the smudge filter will not be empty
+            gitLFSConfigured = cliGitClient.launchCommand("config", "filter.lfs.smudge").contains("git-lfs");
+        } catch (GitException exception) {
+            // This is expected when git-lfs is not installed.
+            gitLFSConfigured = false;
+        }
+        CLI_GIT_HAS_GIT_LFS_CONFIGURED = gitLFSConfigured;
+        LFS_SUPPORTS_SPARSE_CHECKOUT = CLI_GIT_HAS_GIT_LFS_CONFIGURED && gitSparseCheckoutWithLFS && cliGitClient.isAtLeastVersion(2, 0, 0, 0);
     }
 
     @Parameterized.Parameters(name = "{0}")
@@ -144,13 +169,6 @@ public class GitClientTest {
             arguments.add(item);
         }
         return arguments;
-    }
-
-    @BeforeClass
-    public static void setCliGitDefaults() throws Exception {
-        /* Command line git commands fail unless certain default values are set */
-        CliGitCommand gitCmd = new CliGitCommand(null);
-        gitCmd.setDefaults();
     }
 
     /**
@@ -187,9 +205,38 @@ public class GitClientTest {
         srcRepoDir = new File(mirrorParent, "git-client-plugin");
     }
 
+    /**
+     * Tests that need the default branch name can use this variable.
+     */
+    private static String defaultBranchName = "mast" + "er"; // Intentionally separated string
+
+    /**
+     * Determine the global default branch name.
+     * Command line git is moving towards more inclusive naming.
+     * Git 2.32.0 honors the configuration variable `init.defaultBranch` and uses it for the name of the initial branch.
+     * This method reads the global configuration and uses it to set the value of `defaultBranchName`.
+     */
+    @BeforeClass
+    public static void computeDefaultBranchName() throws Exception {
+        File configDir = Files.createTempDirectory("readGitConfig").toFile();
+        CliGitCommand getDefaultBranchNameCmd = new CliGitCommand(Git.with(TaskListener.NULL, new EnvVars()).in(configDir).using("git").getClient());
+        String[] output = getDefaultBranchNameCmd.runWithoutAssert("config", "--get", "init.defaultBranch");
+        for (String s : output) {
+            String result = s.trim();
+            if (result != null && !result.isEmpty()) {
+                defaultBranchName = result;
+            }
+        }
+        assertTrue("Failed to delete temporary readGitConfig directory", configDir.delete());
+    }
+
     @AfterClass
     public static void removeMirrorAndSrcRepos() throws Exception {
-        FileUtils.deleteDirectory(mirrorParent);
+        try {
+            FileUtils.deleteDirectory(mirrorParent);
+        } catch (IOException ioe) {
+            System.out.println("Ignored cleanup failure on " + mirrorParent);
+        }
     }
 
     @Before
@@ -201,6 +248,26 @@ public class GitClientTest {
         gitClient.init_().workspace(repoRoot.getAbsolutePath()).execute();
         assertTrue("Missing " + gitDir, gitDir.isDirectory());
         gitClient.setRemoteUrl("origin", srcRepoDir.getAbsolutePath());
+        CliGitCommand gitCmd = new CliGitCommand(gitClient);
+        gitCmd.run("config", "user.name", "Vojtěch GitClientTest Zweibrücken-Šafařík");
+        gitCmd.run("config", "user.email", "email.from.git.client@example.com");
+    }
+
+    /**
+     * Allow local git clones to use the file:// protocol by setting
+     * protocol.file.allow=always on the git command line of the
+     * GitClient argument that is passed.
+     * <p>
+     * Command line git 2.38.1 and patches to earlier versions
+     * disallow local git submodule cloning with the file:// protocol.
+     * The change resolves a security issue but that security issue is
+     * not a threat to these tests.
+     */
+    private void allowFileProtocol(GitClient client) throws Exception {
+        if (client instanceof CliGitAPIImpl) {
+            CliGitAPIImpl cliGit = (CliGitAPIImpl) client;
+            cliGit.allowFileProtocol();
+        }
     }
 
     private static final String COMMITTED_ONE_TEXT_FILE = "Committed one text file";
@@ -210,7 +277,7 @@ public class GitClientTest {
     }
 
     private ObjectId commitOneFile(final String commitMessage) throws Exception {
-        final String content = String.format("A random UUID: %s\n", UUID.randomUUID().toString());
+        final String content = String.format("A random UUID: %s\n", UUID.randomUUID());
         return commitFile("One-File.txt", content, commitMessage);
     }
 
@@ -223,15 +290,15 @@ public class GitClientTest {
         return headList.get(0);
     }
 
-    private void createFile(String path, String content) throws Exception {
+    private void createFile(String path, String content) {
         File aFile = new File(repoRoot, path);
         File parentDir = aFile.getParentFile();
         if (parentDir != null) {
             parentDir.mkdirs();
         }
-        try (PrintWriter writer = new PrintWriter(aFile, "UTF-8")) {
+        try (PrintWriter writer = new PrintWriter(aFile, StandardCharsets.UTF_8)) {
             writer.printf(content);
-        } catch (FileNotFoundException | UnsupportedEncodingException ex) {
+        } catch (IOException ex) {
             throw new GitException(ex);
         }
     }
@@ -260,8 +327,6 @@ public class GitClientTest {
         return name.replaceAll(" ", ".") + "@middle.earth";
     }
 
-    @Test
-    @Issue("JENKINS-29977")
     /**
      * Changelog was formatted on word boundary prior to
      * 72 characters with git client plugin 2.0+ when using CLI git.
@@ -270,6 +335,8 @@ public class GitClientTest {
      * Matching change will be included in git plugin 4.0.0
      * to retain existing truncation behavior.
      */
+    @Test
+    @Issue("JENKINS-29977")
     public void testChangelogVeryLong() throws Exception {
 
         final String gitMessage =
@@ -285,7 +352,7 @@ public class GitClientTest {
                         "\nseis\n" +
                         "\nasfasfasfasf\n"
                 ;
-        final String content = String.format("A random UUID: %s\n", UUID.randomUUID().toString());
+        final String content = String.format("A random UUID: %s\n", UUID.randomUUID());
         ObjectId message = commitFile("One-File.txt", content, gitMessage);
 
         ChangelogCommand changelog = gitClient.changelog();
@@ -362,8 +429,7 @@ public class GitClientTest {
         final ObjectId commitA = commitOneFile();
         ChangelogCommand changelog = gitClient.changelog();
         changelog.includes(commitA);
-        thrown.expect(IllegalStateException.class);
-        changelog.execute();
+        assertThrows(IllegalStateException.class, changelog::execute);
     }
 
     @Test
@@ -371,8 +437,7 @@ public class GitClientTest {
         final ObjectId commitA = commitOneFile();
         ChangelogCommand changelog = gitClient.changelog();
         changelog.excludes(commitA);
-        thrown.expect(IllegalStateException.class);
-        changelog.execute();
+        assertThrows(IllegalStateException.class, changelog::execute);
     }
 
     @Test
@@ -409,7 +474,7 @@ public class GitClientTest {
                 found = true;
             }
         }
-        assertTrue("no " + prefix + ", expected: '" + expected + "' in " + builder.toString(), found);
+        assertTrue("no " + prefix + ", expected: '" + expected + "' in " + builder, found);
     }
 
     private void assertAuthor(ObjectId commitA, ObjectId commitB, String name, String email) throws GitException, InterruptedException {
@@ -489,26 +554,41 @@ public class GitClientTest {
     }
 
     @Test
+    public void testInit_Bare() throws Exception {
+        File repoRootTemp = tempFolder.newFolder();
+        GitClient gitClientTemp = Git.with(TaskListener.NULL, new EnvVars()).in(repoRootTemp).using(gitImplName).getClient();
+        File tempDir = gitClientTemp.withRepository((repo, channel) -> repo.getDirectory());
+        assertFalse("Missing", tempDir.isDirectory());
+        gitClientTemp.init_().workspace(repoRootTemp.getPath()).bare(true).execute();
+        // Bare git_init contains no working tree file
+        tempDir = gitClientTemp.withRepository((repo, channel) -> repo.getWorkTree());
+        assertFalse(".refs not found", tempDir.isFile());
+    }
+
+    @Test
     public void testInitFailureWindows() throws Exception {
-        assumeTrue(isWindows());
+        if (!isWindows()) {
+            return;
+        }
         String badDirName = "CON:";
         File badDir = new File(badDirName);
         GitClient badGitClient = Git.with(TaskListener.NULL, new EnvVars()).in(badDir).using(gitImplName).getClient();
-        Class expectedExceptionClass = gitImplName.equals("git") ? GitException.class : InvalidPathException.class;
-        thrown.expect(expectedExceptionClass);
-        badGitClient.init_().bare(random.nextBoolean()).workspace(badDirName).execute();
+        Class expectedExceptionClass = gitImplName.equals("git") ? GitException.class : JGitInternalException.class;
+        assertThrows(expectedExceptionClass,
+                     () -> badGitClient.init_().bare(random.nextBoolean()).workspace(badDirName).execute());
     }
 
     @Test
     public void testInitFailureNotWindowsNotSuperUser() throws Exception {
-        assumeFalse(isWindows());
-        assumeFalse("running as root?", new File("/").canWrite());
+        if (isWindows() || (new File("/").canWrite())) { // Windows or running as root
+            return;
+        }
         String badDirName = "/this/directory/is/not/accessible";
         File badDir = new File(badDirName);
         GitClient badGitClient = Git.with(TaskListener.NULL, new EnvVars()).in(badDir).using(gitImplName).getClient();
         Class expectedExceptionClass = gitImplName.equals("git") ? GitException.class : JGitInternalException.class;
-        thrown.expect(expectedExceptionClass);
-        badGitClient.init_().bare(random.nextBoolean()).workspace(badDirName).execute();
+        assertThrows(expectedExceptionClass,
+                     () -> badGitClient.init_().bare(random.nextBoolean()).workspace(badDirName).execute());
     }
 
     @Test
@@ -552,7 +632,7 @@ public class GitClientTest {
             fileList.append(file.getAbsolutePath());
             fileList.append(" ");
         }
-        assertTrue("Source repo '" + srcRepoDir.getAbsolutePath() + "' not initialized, contains " + fileList.toString(), srcGitClient.hasGitRepo());
+        assertTrue("Source repo '" + srcRepoDir.getAbsolutePath() + "' not initialized, contains " + fileList, srcGitClient.hasGitRepo());
 
         File emptyDir = tempFolder.newFolder();
         assertTrue(emptyDir.exists());
@@ -561,14 +641,275 @@ public class GitClientTest {
     }
 
     @Test
+    public void testHasGitRepoFalse() throws Exception {
+        /* Use system temp directory so that no parent directory has a git repository */
+        Path tempDir = Files.createTempDirectory("git-client-hasGitRepo");
+        GitClient noRepoClient = Git.with(TaskListener.NULL, new EnvVars()).in(tempDir.toFile()).using(gitImplName).getClient();
+        assertFalse("New empty temp dir has a git repo(1)", noRepoClient.hasGitRepo());
+        assertFalse("New empty temp dir has a git repo(2)", noRepoClient.hasGitRepo(false));
+        assertFalse("New empty temp dir has a git repo(3)", noRepoClient.hasGitRepo(true));
+        tempDir.toFile().delete(); // Remove the temporary directory
+    }
+
+    @Issue("JENKINS-38699")
+    @Test
+    public void testHasGitRepoNestedDir() throws Exception {
+        File childDir = tempFolder.newFolder("parentDir", "childDir");
+        File parentDir = childDir.getParentFile();
+
+        GitClient parentDirClient = Git.with(TaskListener.NULL, new EnvVars()).in(parentDir).using(gitImplName).getClient();
+        assertFalse("Unexpected has git repo before init(1)", parentDirClient.hasGitRepo());
+        assertFalse("Unexpected has git repo before init(2)", parentDirClient.hasGitRepo(true));
+        assertFalse("Unexpected has git repo before init(3)", parentDirClient.hasGitRepo(false));
+
+        parentDirClient.init();
+        assertTrue("Missing git repo after init(1)", parentDirClient.hasGitRepo());
+        assertTrue("Missing git repo after init(2)", parentDirClient.hasGitRepo(true));
+        assertTrue("Missing git repo after init(3)", parentDirClient.hasGitRepo(false));
+
+        GitClient childDirClient = Git.with(TaskListener.NULL, new EnvVars()).in(childDir).using(gitImplName).getClient();
+        assertFalse("Unexpected has child git repo before child init(1)", childDirClient.hasGitRepo());
+        assertFalse("Unexpected has child git repo before child init(2)", childDirClient.hasGitRepo(true));
+        assertFalse("Unexpected has child git repo before child init(3)", childDirClient.hasGitRepo(false));
+
+        File childGitDir = new File(childDir, ".git");
+        boolean dirCreated = childGitDir.mkdir();
+        assertTrue("Failed to create empty .git dir in childDir", dirCreated);
+        if (gitImplName.equals("git")) {
+            // JENKINS-38699 - if an empty .git directory exists, CLI git searches upwards to perform operations
+            assertTrue("Missing parent git repo before child init(1)", childDirClient.hasGitRepo());
+        } else {
+            // JENKINS-38699 - if an empty .git directory exists, JGit does NOT search upwards to perform operations
+            assertFalse("Unexpected parent git repo detected by JGit before child init(1)", childDirClient.hasGitRepo());
+        }
+        assertTrue("Missing parent git repo before child init(2)", childDirClient.hasGitRepo(true));
+        assertFalse("Unexpected has child repo before child init(3)", childDirClient.hasGitRepo(false));
+
+        childDirClient.init();
+        assertTrue("Missing git repo after child init(1)", childDirClient.hasGitRepo());
+        assertTrue("Missing git repo after child init(2)", childDirClient.hasGitRepo(true));
+        assertTrue("Missing git repo after child init(3)", childDirClient.hasGitRepo(false));
+    }
+
+    @Test
     public void testIsCommitInRepo() throws Exception {
         assertTrue(srcGitClient.isCommitInRepo(upstreamCommit));
         assertFalse(gitClient.isCommitInRepo(upstreamCommit));
+        assertFalse(gitClient.isCommitInRepo(null)); // NPE safety check
+        // this MAY fail if commit has this exact sha1, but please admit this would be unlucky
+        assertFalse(gitClient.isCommitInRepo(ObjectId.fromString("1111111111111111111111111111111111111111")));
+    }
+
+    private void assertExceptionMessageContains(GitException ge, String expectedSubstring) {
+        String actual = ge.getMessage().toLowerCase();
+        assertTrue("Expected '" + expectedSubstring + "' exception message, but was: " + actual, actual.contains(expectedSubstring));
+    }
+
+    private IGitAPI IGitAPIForTrueBareRepositoryTests() throws IOException, InterruptedException {
+        // provides iGitAPI with bare repository initialization
+        File repoRootTemp = tempFolder.newFolder();
+        GitClient gitClientTemp = Git.with(TaskListener.NULL,new EnvVars()).in(repoRootTemp).using(gitImplName).getClient();
+        gitClientTemp.init_().workspace(repoRootTemp.getAbsolutePath()).bare(true).execute();
+        return (IGitAPI) gitClientTemp;
+    }
+
+    @Test
+    @Deprecated
+    public void testIsBareRepositoryBareDot() throws InterruptedException, IOException {
+        IGitAPI gitAPI = IGitAPIForTrueBareRepositoryTests();
+        assertTrue(". is not a bare repository", gitAPI.isBareRepository("."));
+    }
+
+    @Test
+    @Deprecated
+    public void testIsBareRepositoryWorkingDotGit() throws IOException, InterruptedException {
+        gitClient.init_().workspace(repoRoot.getAbsolutePath()).bare(true).execute();
+        IGitAPI gitAPI = (IGitAPI) gitClient;
+        FilePath gitClientFilePath = gitClient.getWorkTree();
+        gitClientFilePath.createTextTempFile("aPre", ".txt", "file contents");
+        gitClient.add(".");
+        gitClient.commit("Not-a-bare-repository-dot-git");
+        assertFalse(".git is a bare repository", gitAPI.isBareRepository(".git"));
+    }
+
+    @Test
+    @Deprecated
+    public void testIsBareRepositoryBareDotGit() throws IOException, InterruptedException {
+        IGitAPI gitAPI = IGitAPIForTrueBareRepositoryTests();
+        /* Bare repository does not have a .git directory.  This is
+         * another no-such-location test but is included here for
+         * consistency.
+         */
+        try {
+            /* JGit knows that w.igit() has a workspace, and asks the workspace
+             * if it is bare.  That seems more correct than relying on testing
+             * a specific file that the repository is bare.  JGit behaves better
+             * than CliGit in this case.
+             */
+            assertTrue("non-existent .git is in a bare repository", gitAPI.isBareRepository(".git"));
+            /* JGit will not throw an exception - it knows the repo is bare */
+            /* CliGit throws an exception so should not reach the next assertion */
+            assertFalse("CliGitAPIImpl did not throw expected exception", gitAPI instanceof CliGitAPIImpl);
+        } catch (GitException ge) {
+            /* Only enters this path for CliGit */
+            assertExceptionMessageContains(ge, "not a git repository");
+        }
+    }
+
+    @Test
+    @Deprecated
+    public void testIsBareRepositoryWorkingNoSuchLocation() throws IOException, InterruptedException {
+        gitClient.init_().workspace(repoRoot.getAbsolutePath()).bare(true).execute();
+        IGitAPI gitAPI = (IGitAPI) gitClient;
+        FilePath gitClientFilePath = gitClient.getWorkTree();
+        gitClientFilePath.createTextTempFile("aPre", ".txt", "file contents");
+        gitClient.add(".");
+        gitClient.commit("Not-a-bare-repository-working-no-such-location");
+        try {
+            assertFalse("non-existent location is in a bare repository", gitAPI.isBareRepository("no-such-location"));
+            /* JGit will not throw an exception - it knows the repo is not bare */
+            /* CliGit throws an exception so should not reach the next assertion */
+            assertFalse("CliGitAPIImpl did not throw expected exception", gitAPI instanceof CliGitAPIImpl);
+        } catch (GitException ge) {
+            /* Only enters this path for CliGit */
+            assertExceptionMessageContains(ge, "not a git repository");
+        }
+    }
+
+    @Test
+    @Deprecated
+    public void testIsBareRepositoryBareNoSuchLocation() throws IOException, InterruptedException {
+        IGitAPI gitAPI = IGitAPIForTrueBareRepositoryTests();
+        try {
+            assertTrue("non-existent location is in a bare repository", gitAPI.isBareRepository("no-such-location"));
+            /* JGit will not throw an exception - it knows the repo is not bare */
+            /* CliGit throws an exception so should not reach the next assertion */
+            assertFalse("CliGitAPIImpl did not throw expected exception", gitAPI instanceof CliGitAPIImpl);
+        } catch (GitException ge) {
+            /* Only enters this path for CliGit */
+            assertExceptionMessageContains(ge, "not a git repository");
+        }
+    }
+
+    @Deprecated
+    @Test
+    public void testIsBareRepositoryBareEmptyString() throws IOException, InterruptedException {
+        IGitAPI gitAPI = IGitAPIForTrueBareRepositoryTests();
+        assertTrue("empty string is not a bare repository", gitAPI.isBareRepository(""));
+    }
+
+    @Deprecated
+    @Test
+    public void testIsBareRepositoryWorkingEmptyString() throws IOException, InterruptedException {
+        gitClient.init_().workspace(repoRoot.getAbsolutePath()).bare(true).execute();
+        IGitAPI gitAPI = (IGitAPI) gitClient;
+        FilePath gitClientFilePath = gitClient.getWorkTree();
+        gitClientFilePath.createTextTempFile("aPre", ".txt", "file contents");
+        gitClient.add(".");
+        gitClient.commit("Not-a-bare-repository-empty-string");
+        assertFalse("empty string is a bare repository", gitAPI.isBareRepository(""));
+    }
+
+    @Deprecated
+    @Test
+    public void testIsBareRepositoryBareNoArg() throws IOException, InterruptedException {
+        IGitAPI gitAPI = IGitAPIForTrueBareRepositoryTests();
+        assertTrue("no arg is not a bare repository", gitAPI.isBareRepository());
+    }
+
+    @Deprecated
+    @Test
+    public void testIsBareRepositoryWorkingNoArg() throws IOException, InterruptedException {
+        gitClient.init_().workspace(repoRoot.getAbsolutePath()).bare(true).execute();
+        IGitAPI gitAPI = (IGitAPI) gitClient;
+        FilePath gitClientFilePath = gitClient.getWorkTree();
+        gitClientFilePath.createTextTempFile("aPre", ".txt", "file contents");
+        gitClient.add(".");
+        gitClient.commit("Not-a-bare-repository-no-arg");
+        assertFalse("no arg is a bare repository", gitAPI.isBareRepository());
+    }
+
+    @Test
+    public void testBareRepoInit() throws IOException, InterruptedException {
+        IGitAPI gitAPI = IGitAPIForTrueBareRepositoryTests();
+        File tempDir = gitAPI.withRepository((repo, channel) -> repo.getWorkTree());
+        File gitFile = new File(tempDir,".git");
+        File gitObjFile = new File(tempDir,".git/objects");
+        File objFile = new File(tempDir,"objects");
+        assertFalse(".git exists unexpectedly", gitFile.exists());
+        assertFalse(".git/objects exists unexpectedly", gitObjFile.exists());
+        assertTrue("objects is not a directory", objFile.isDirectory());
+    }
+
+    /* The most critical use cases of isBareRepository respond the
+     * same for both the JGit implementation and the CliGit
+     * implementation.  Those are asserted first in this section of
+     * assertions.
+     */
+
+    @Deprecated
+    @Test
+    public void testIsBareRepositoryWorkingRepoPathDotGit() throws IOException, InterruptedException {
+        gitClient.init_().workspace(repoRoot.getAbsolutePath()).bare(true).execute();
+        IGitAPI gitAPI = (IGitAPI) gitClient;
+        FilePath gitClientFilePath = gitClient.getWorkTree();
+        gitClientFilePath.createTextTempFile("aPre", ".txt", "file contents");
+        gitClient.add(".");
+        gitClient.commit("Not-a-bare-repository-false-repoPath-dot-git");
+        assertFalse("repoPath/.git is a bare repository", gitAPI.isBareRepository(repoRoot.getPath() + File.separator + ".git"));
+    }
+
+    @Deprecated
+    @Test
+    public void testIsBareRepositoryWorkingNull() throws IOException, InterruptedException {
+        gitClient.init_().workspace(repoRoot.getAbsolutePath()).bare(true).execute();
+        IGitAPI gitAPI = (IGitAPI) gitClient;
+        FilePath gitClientFilePath = gitClient.getWorkTree();
+        gitClientFilePath.createTextTempFile("aPre", ".txt", "file contents");
+        gitClient.add(".");
+        gitClient.commit("Not-a-bare-repository-working-null");
+        try {
+            assertFalse("null is a bare repository", gitAPI.isBareRepository(null));
+            fail("Did not throw expected exception");
+        } catch (GitException ge) {
+            assertExceptionMessageContains(ge, "not a git repository");
+        }
+    }
+
+    @Deprecated
+    @Test
+    public void testIsBareRepositoryBareNull() throws IOException, InterruptedException {
+        IGitAPI gitAPI = IGitAPIForTrueBareRepositoryTests();
+        try {
+            assertTrue("null is not a bare repository", gitAPI.isBareRepository(null));
+            fail("Did not throw expected exception");
+        } catch (GitException ge) {
+            assertExceptionMessageContains(ge, "not a git repository");
+        }
+    }
+
+    @Deprecated
+    @Test
+    public void test_isBareRepository_bare_repoPath() throws IOException, InterruptedException {
+        IGitAPI gitAPI = IGitAPIForTrueBareRepositoryTests();
+        File tempRepoDir = gitAPI.withRepository((repo, channel) -> repo.getWorkTree());
+        File dotFile = new File(tempRepoDir,".");
+        assertTrue("repoPath is not a bare repository", gitAPI.isBareRepository(tempRepoDir.getPath()));
+        assertTrue("abs(.) is not a bare repository",gitAPI.isBareRepository(dotFile.getAbsolutePath()));
     }
 
     @Test
     public void testGetRemoteUrl() throws Exception {
         assertEquals(srcRepoDir.getAbsolutePath(), gitClient.getRemoteUrl("origin"));
+    }
+
+    @Test
+    @Deprecated
+    public void testGetRemoteUrl_two_args() throws Exception {
+        IGitAPI iGitAPI = (IGitAPI) gitClient;
+        String originUrl = gitClient.getRemoteUrl("origin");
+        assertThat("Null URL arg", iGitAPI.getRemoteUrl("origin", null), is(originUrl));
+        assertThat("Empty string URL arg", iGitAPI.getRemoteUrl("origin", ""), is(originUrl));
     }
 
     @Test
@@ -585,24 +926,100 @@ public class GitClientTest {
         assertEquals(upstreamRepoURL, gitClient.getRemoteUrl("upstream"));
     }
 
+    @Test
+    public void testAutocreateFailsOnMultipleMatchingOrigins() throws Exception {
+        File repoRootTemp = tempFolder.newFolder();
+        GitClient gitClientTemp = Git.with(TaskListener.NULL, new EnvVars()).in(repoRootTemp).using(gitImplName).getClient();
+        gitClientTemp.init();
+        CliGitCommand gitCmd = new CliGitCommand(gitClientTemp);
+        gitCmd.run("config", "user.name", "Vojtěch GitClientTest Zweibrücken-Šafařík");
+        gitCmd.run("config", "user.email", "email.from.git.client@example.com");
+        FilePath gitClientFilePath = gitClientTemp.getWorkTree();
+        FilePath gitClientTempFile = gitClientFilePath.createTextTempFile("aPre", ".txt", "file contents");
+        gitClientTemp.add(".");
+        gitClientTemp.commit("Added " + gitClientTempFile.toURI().toString());
+        gitClient.clone_().url("file://" + repoRootTemp.getPath()).execute();
+        final URIish remote = new URIish(Constants.DEFAULT_REMOTE_NAME);
+
+        try ( // add second remote
+              FileRepository repo = new FileRepository(new File(repoRoot, ".git"))) {
+            StoredConfig config = repo.getConfig();
+            config.setString("remote", "upstream", "url", "file://" + repoRootTemp.getPath());
+            config.setString("remote", "upstream", "fetch", "+refs/heads/*:refs/remotes/upstream/*");
+            config.save();
+        }
+
+        // fill both remote branches
+        List<RefSpec> refspecs = Collections.singletonList(new RefSpec(
+                "refs/heads/*:refs/remotes/origin/*"));
+        gitClient.fetch_().from(remote, refspecs).execute();
+        refspecs = Collections.singletonList(new RefSpec(
+                "refs/heads/*:refs/remotes/upstream/*"));
+        gitClient.fetch_().from(remote, refspecs).execute();
+
+        // checkout will fail
+        try {
+            gitClient.checkout().ref(Constants.MASTER).execute();
+        } catch (GitException e) {
+            // expected
+            Set<String> refNames = gitClient.getRefNames("refs/heads/");
+            assertFalse("RefNames will not contain master", refNames.contains("refs/heads/master"));
+        }
+
+    }
+
+    /**
+     * Test case for auto local branch creation behviour.
+     * This is essentially a stripped down version of {@link GitAPITestUpdate#testBranchContainingRemote()}
+     * @throws Exception on exceptions occur
+     */
+    @Test
+    public void testCheckoutRemoteAutocreatesLocal() throws Exception {
+        File repoRootTemp = tempFolder.newFolder();
+        GitClient gitClientTemp = Git.with(TaskListener.NULL, new EnvVars()).in(repoRootTemp).using(gitImplName).getClient();
+        gitClientTemp.init();
+        CliGitCommand gitCmd = new CliGitCommand(gitClientTemp);
+        gitCmd.run("config", "user.name", "Vojtěch GitClientTest temp Zweibrücken-Šafařík");
+        gitCmd.run("config", "user.email", "email.by.client@example.com");
+        FilePath gitClientFilePath = gitClientTemp.getWorkTree();
+        FilePath gitClientTempFile = gitClientFilePath.createTextTempFile("aPre", ".txt", "file contents");
+        gitClientTemp.add(".");
+        gitClientTemp.commit("Added " + gitClientTempFile.toURI().toString());
+        gitClient.clone_().url("file://" + repoRootTemp.getPath()).execute();
+        final URIish remote = new URIish(Constants.DEFAULT_REMOTE_NAME);
+        final List<RefSpec> refspecs = Collections.singletonList(new RefSpec(
+                "refs/heads/*:refs/remotes/origin/*"));
+        gitClient.fetch_().from(remote, refspecs).execute();
+        gitClient.checkout().ref(defaultBranchName).execute();
+
+        Set<String> refNames = gitClient.getRefNames("refs/heads/");
+        assertThat(refNames, contains("refs/heads/" + defaultBranchName));
+    }
+
     private void assertFileInWorkingDir(GitClient client, String fileName) {
         File fileInRepo = new File(repoRoot, fileName);
-        assertTrue(fileInRepo.getAbsolutePath() + " not found", fileInRepo.isFile());
+        assertThat(fileInRepo, is(anExistingFile()));
     }
 
     private void assertFileNotInWorkingDir(GitClient client, String fileName) {
         File fileInRepo = new File(repoRoot, fileName);
-        assertFalse(fileInRepo.getAbsolutePath() + " found", fileInRepo.isFile());
+        assertThat(fileInRepo, is(not(anExistingFile())));
+    }
+
+    private void assertFileContent(String fileName, String expectedContent) throws IOException {
+        File file = new File(repoRoot, fileName);
+        String actualContent = Files.readString(file.toPath(), StandardCharsets.UTF_8).trim();
+        assertEquals("Incorrect file content in " + fileName, expectedContent, actualContent);
     }
 
     private void assertDirInWorkingDir(GitClient client, String dirName) {
         File dirInRepo = new File(repoRoot, dirName);
-        assertTrue(dirInRepo.getAbsolutePath() + " found", dirInRepo.isDirectory());
+        assertThat(dirInRepo, is(anExistingDirectory()));
     }
 
     private void assertDirNotInWorkingDir(GitClient client, String dirName) {
         File dirInRepo = new File(repoRoot, dirName);
-        assertFalse(dirInRepo.getAbsolutePath() + " found", dirInRepo.isDirectory());
+        assertThat(dirInRepo, is(not(anExistingDirectory())));
     }
 
     private boolean removeMatchingBranches(Set<Branch> filtered, Set<Branch> toRemove) {
@@ -801,8 +1218,8 @@ public class GitClientTest {
         String remote = fetchUpstream(branch);
         gitClient.checkoutBranch(branch, remote + "/" + branch);
         /* Check that exception is thrown trying to create an existing branch */
-        thrown.expect(GitException.class);
-        gitClient.branch("master");
+        assertThrows(GitException.class,
+                     () -> gitClient.branch("master"));
     }
 
     @Test
@@ -812,11 +1229,14 @@ public class GitClientTest {
         String branch = "master";
         String remote = fetchUpstream(branch);
         gitClient.checkoutBranch(branch, remote + "/" + branch);
-        /* Check that exception is thrown trying to commit nothing */
         if (gitImplName.equals("git")) {
-            thrown.expect(GitException.class);
+            /* Check that exception is thrown trying to commit nothing */
+            assertThrows(GitException.class,
+                         () -> gitClient.commit("This commit contains no changes"));
+        } else {
+            /* Check that JGit does not throw an exception trying to commit nothing */
+            gitClient.commit("This commit contains no changes");
         }
-        gitClient.commit("This commit contains no changes");
     }
 
     @Test
@@ -826,32 +1246,321 @@ public class GitClientTest {
         String branch = "master";
         String remote = fetchUpstream(branch);
         gitClient.checkoutBranch(branch, remote + "/" + branch);
-        /* Check that exception is thrown trying to delete non-existent branch */
         if (gitImplName.equals("git")) {
-            thrown.expect(GitException.class);
+            /* Check that exception is thrown trying to delete non-existent branch */
+            assertThrows(GitException.class,
+                         () -> gitClient.deleteBranch("ThisBranchDoesNotExist"));
+        } else {
+            /* Check that JGit does not throw an exception trying to delete non-existent branch */
+            gitClient.deleteBranch("ThisBranchDoesNotExist");
         }
-        gitClient.deleteBranch("ThisBranchDoesNotExist");
     }
 
     @Issue("JENKINS-35687") // Git LFS support
     @Test
     public void testCheckoutWithCliGitLFS() throws Exception {
-        assumeThat(gitImplName, is("git"));
-        assumeTrue(CLI_GIT_HAS_GIT_LFS);
+        if (!gitImplName.equals("git") || !CLI_GIT_HAS_GIT_LFS) {
+            return;
+        }
         String branch = "tests/largeFileSupport";
         String remote = fetchLFSTestRepo(branch);
         gitClient.checkout().branch(branch).ref(remote + "/" + branch).lfsRemote(remote).execute();
-        File uuidFile = new File(repoRoot, "uuid.txt");
-        String fileContent = FileUtils.readFileToString(uuidFile, "utf-8").trim();
-        String expectedContent = "5e7733d8acc94636850cb466aec524e4";
-        assertEquals("Incorrect LFS file contents in " + uuidFile, expectedContent, fileContent);
+
+        assertFileContent("uuid.txt", "5e7733d8acc94636850cb466aec524e4");
+    }
+
+    @Issue("JENKINS-43427") // Git LFS sparse checkout support
+    @Test
+    public void testSparseCheckoutWithCliGitLFS() throws Exception {
+        if (!gitImplName.equals("git") || !CLI_GIT_HAS_GIT_LFS || isWindows()) {
+            /* Slow test that does not tell us much more on Windows than Linux */
+            return;
+        }
+
+        String branch = "tests/largeFileSupport";
+
+        String file1 = "uuid.txt";
+        String file2 = "uuid2.txt";
+        String file3 = "uuid,3.txt";
+        String file4 = "uuid 4.txt";
+
+        String lfsObjectFile1 = ".git/lfs/objects/75/d1/75d122e4160dc91480257ff72403e77ef276e24d7416ed2be56d4e726482d86e";
+        String lfsObjectFile2 = ".git/lfs/objects/7f/0b/7f0bbf4cdb2bdf3e862c5f00285d362db0b46465ed089775743ce1ebe6c912ce";
+        String lfsObjectFile3 = ".git/lfs/objects/1e/35/1e359899b05181e6a118865d47ed027b9930bc870dffbd9608c609ec3b2a3d16";
+        String lfsObjectFile4 = ".git/lfs/objects/44/a0/44a0d97ff32b5ba6a28ea8a35d1ebbfd8f9a8a2db316e87abd530b4b60153b5c";
+
+        String expectedContent1 = "5e7733d8acc94636850cb466aec524e4";
+        String expectedContent2 = "c49d89a61c3411e9a5555b2af3892239";
+        String expectedContent3 = "6fd3199a1cb111e9bbaf537fc996ab9b";
+        String expectedContent4 = "803219bc1cb111e9abbfb7cc7b029948";
+
+        // it should support sparse checkout of LFS files
+        {
+            setGitClient();
+            String remote = fetchLFSTestRepo(branch);
+            assertEmptyWorkingDir(gitClient);
+
+            List<String> sparsePaths = Collections.singletonList("uuid.txt");
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths).execute();
+
+            assertFileContent(file1, expectedContent1);
+            assertFileNotInWorkingDir(gitClient, file2);
+            assertFileNotInWorkingDir(gitClient, file3);
+            assertFileNotInWorkingDir(gitClient, file4);
+
+            assertFileInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile4);
+        }
+
+        // it should support multiple sparse checkout paths
+        {
+            setGitClient();
+            String remote = fetchLFSTestRepo(branch);
+            assertEmptyWorkingDir(gitClient);
+
+            List<String> sparsePaths = Arrays.asList("uuid.txt", "uuid2.txt");
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths).execute();
+
+            assertFileContent(file1, expectedContent1);
+            assertFileContent(file2, expectedContent2);
+            assertFileNotInWorkingDir(gitClient, file3);
+            assertFileNotInWorkingDir(gitClient, file4);
+
+            assertFileInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile4);
+        }
+
+        // it should support commas (",") in sparse checkout paths
+        // (due to https://github.com/git-lfs/git-lfs/issues/2264 no sparse checkout can be used here)
+        {
+            setGitClient();
+            String remote = fetchLFSTestRepo(branch);
+            assertEmptyWorkingDir(gitClient);
+
+            List<String> sparsePaths = Collections.singletonList("uuid,3.txt");
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths).execute();
+
+            assertFileContent(file1, expectedContent1); // file present due to workaround
+            assertFileContent(file2, expectedContent2); // file present due to workaround
+            assertFileContent(file3, expectedContent3);
+            assertFileContent(file4, expectedContent4); // file present due to workaround
+
+            assertFileInWorkingDir(gitClient, lfsObjectFile1); // file present due to workaround
+            assertFileInWorkingDir(gitClient, lfsObjectFile2); // file present due to workaround
+            assertFileInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileInWorkingDir(gitClient, lfsObjectFile4); // file present due to workaround
+        }
+
+        // it should support spaces (" ") in sparse checkout paths
+        {
+            setGitClient();
+            String remote = fetchLFSTestRepo(branch);
+            assertEmptyWorkingDir(gitClient);
+
+            List<String> sparsePaths = Collections.singletonList("uuid 4.txt");
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths).execute();
+
+            assertFileNotInWorkingDir(gitClient, file1);
+            assertFileNotInWorkingDir(gitClient, file2);
+            assertFileNotInWorkingDir(gitClient, file3);
+            assertFileContent(file4, expectedContent4);
+
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileInWorkingDir(gitClient, lfsObjectFile4);
+        }
+
+        // it should support pattern matching with "?" in sparse checkout paths
+        {
+            setGitClient();
+            String remote = fetchLFSTestRepo(branch);
+            assertEmptyWorkingDir(gitClient);
+
+            List<String> sparsePaths = Collections.singletonList("uuid.t?t");
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths).execute();
+
+            assertFileContent(file1, expectedContent1);
+            assertFileNotInWorkingDir(gitClient, file2);
+            assertFileNotInWorkingDir(gitClient, file3);
+            assertFileNotInWorkingDir(gitClient, file4);
+
+            assertFileInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile4);
+        }
+
+        // it should support pattern matching with "*" in sparse checkout paths
+        {
+            setGitClient();
+            String remote = fetchLFSTestRepo(branch);
+            assertEmptyWorkingDir(gitClient);
+
+            List<String> sparsePaths = Collections.singletonList("uuid.*");
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths).execute();
+
+            assertFileContent(file1, expectedContent1);
+            assertFileNotInWorkingDir(gitClient, file2);
+            assertFileNotInWorkingDir(gitClient, file3);
+            assertFileNotInWorkingDir(gitClient, file4);
+
+            assertFileInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile4);
+        }
+
+        // it should support pattern matching with "**" in sparse checkout paths
+        {
+            setGitClient();
+            String remote = fetchLFSTestRepo(branch);
+            assertEmptyWorkingDir(gitClient);
+
+            List<String> sparsePaths = Collections.singletonList("/**/uuid.txt");
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths).execute();
+
+            assertFileContent(file1, expectedContent1);
+            assertFileNotInWorkingDir(gitClient, file2);
+            assertFileNotInWorkingDir(gitClient, file3);
+            assertFileNotInWorkingDir(gitClient, file4);
+
+            assertFileInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile4);
+        }
+
+        // it should support negate pattern (leading "!") in sparse checkout paths
+        {
+            setGitClient();
+            String remote = fetchLFSTestRepo(branch);
+            assertEmptyWorkingDir(gitClient);
+
+            List<String> sparsePaths = Arrays.asList("/*", "!uuid.txt");
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths).execute();
+
+            assertFileNotInWorkingDir(gitClient, file1);
+            assertFileContent(file2, expectedContent2);
+            assertFileContent(file3, expectedContent3);
+            assertFileContent(file4, expectedContent4);
+
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileInWorkingDir(gitClient, lfsObjectFile4);
+        }
+
+        // it should remove former checked out file when changing sparse checkout paths
+        {
+            setGitClient();
+            String remote = fetchLFSTestRepo(branch);
+            assertEmptyWorkingDir(gitClient);
+
+            List<String> sparsePaths1 = Collections.singletonList("uuid.txt");
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths1).execute();
+
+            assertFileContent(file1, expectedContent1);
+            assertFileNotInWorkingDir(gitClient, file2);
+            assertFileNotInWorkingDir(gitClient, file3);
+            assertFileNotInWorkingDir(gitClient, file4);
+
+            assertFileInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile4);
+
+	    if (LFS_SUPPORTS_SPARSE_CHECKOUT) {
+		List<String> sparsePaths2 = Collections.singletonList("uuid2.txt");
+		gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths2).execute();
+
+		assertFileNotInWorkingDir(gitClient, file1);
+		assertFileContent(file2, expectedContent2);
+		assertFileNotInWorkingDir(gitClient, file3);
+		assertFileNotInWorkingDir(gitClient, file4);
+
+		assertFileInWorkingDir(gitClient, lfsObjectFile1);
+		assertFileInWorkingDir(gitClient, lfsObjectFile2);
+		assertFileNotInWorkingDir(gitClient, lfsObjectFile3);
+		assertFileNotInWorkingDir(gitClient, lfsObjectFile4);
+	    }
+        }
+
+        // it should support switching from non-sparse to sparse checkout
+        {
+            setGitClient();
+            String remote = fetchLFSTestRepo(branch);
+            assertEmptyWorkingDir(gitClient);
+
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).execute();
+
+            assertFileContent(file1, expectedContent1);
+            assertFileContent(file2, expectedContent2);
+            assertFileContent(file3, expectedContent3);
+            assertFileContent(file4, expectedContent4);
+
+            assertFileInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileInWorkingDir(gitClient, lfsObjectFile4);
+
+            List<String> sparsePaths = Collections.singletonList("uuid.txt");
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths).execute();
+
+            assertFileContent(file1, expectedContent1);
+            assertFileNotInWorkingDir(gitClient, file2);
+            assertFileNotInWorkingDir(gitClient, file3);
+            assertFileNotInWorkingDir(gitClient, file4);
+
+            assertFileInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileInWorkingDir(gitClient, lfsObjectFile4);
+        }
+
+        // it should support switching from sparse to non-sparse checkout
+        {
+            setGitClient();
+            String remote = fetchLFSTestRepo(branch);
+            assertEmptyWorkingDir(gitClient);
+
+            List<String> sparsePaths = Collections.singletonList("uuid.txt");
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).sparseCheckoutPaths(sparsePaths).execute();
+
+            assertFileContent(file1, expectedContent1);
+            assertFileNotInWorkingDir(gitClient, file2);
+            assertFileNotInWorkingDir(gitClient, file3);
+            assertFileNotInWorkingDir(gitClient, file4);
+
+            assertFileInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileNotInWorkingDir(gitClient, lfsObjectFile4);
+
+            gitClient.checkout().ref(remote + "/" + branch).lfsRemote(remote).execute();
+
+            assertFileContent(file1, expectedContent1);
+            assertFileContent(file2, expectedContent2);
+            assertFileContent(file3, expectedContent3);
+            assertFileContent(file4, expectedContent4);
+
+            assertFileInWorkingDir(gitClient, lfsObjectFile1);
+            assertFileInWorkingDir(gitClient, lfsObjectFile2);
+            assertFileInWorkingDir(gitClient, lfsObjectFile3);
+            assertFileInWorkingDir(gitClient, lfsObjectFile4);
+        }
     }
 
     @Issue("JENKINS-35687") // Git LFS support - JGit not supported
     @Test(expected = org.eclipse.jgit.api.errors.JGitInternalException.class)
     public void testCheckoutWithJGitLFS() throws Exception {
-        assumeThat(gitImplName, startsWith("jgit"));
-        assumeTrue(CLI_GIT_HAS_GIT_LFS);
+        if (!gitImplName.startsWith("jgit") || !CLI_GIT_HAS_GIT_LFS) {
+            throw new org.eclipse.jgit.api.errors.JGitInternalException("Skipping testCheckoutWithJGitLFS for CLI git exception");
+        }
         String branch = "tests/largeFileSupport";
         String remote = fetchLFSTestRepo(branch);
         gitClient.checkout().branch(branch).ref(remote + "/" + branch).lfsRemote(remote).execute();
@@ -861,8 +1570,9 @@ public class GitClientTest {
     @Issue("JENKINS-35687") // Git LFS support
     @Test(expected = GitException.class)
     public void testCLICheckoutWithoutLFSWhenLFSAvailable() throws Exception {
-        assumeThat(gitImplName, is("git"));
-        assumeTrue(CLI_GIT_HAS_GIT_LFS);
+        if (!gitImplName.equals("git") || !CLI_GIT_HAS_GIT_LFS) {
+            throw new GitException("Test requires CLI git with LFS enabled");
+        }
         String branch = "tests/largeFileSupport";
         String remote = fetchLFSTestRepo(branch);
         gitClient.checkout().branch(branch).ref(remote + "/" + branch).execute();
@@ -872,23 +1582,26 @@ public class GitClientTest {
     @Issue("JENKINS-35687") // Git LFS support
     @Test(expected = org.eclipse.jgit.api.errors.JGitInternalException.class)
     public void testJGitCheckoutWithoutLFSWhenLFSAvailable() throws Exception {
-        assumeThat(gitImplName, startsWith("jgit"));
-        assumeTrue(CLI_GIT_HAS_GIT_LFS);
+        if (!gitImplName.startsWith("jgit") || !CLI_GIT_HAS_GIT_LFS) {
+            throw new org.eclipse.jgit.api.errors.JGitInternalException("Test requires CLI git with LFS enabled");
+        }
         String branch = "tests/largeFileSupport";
         String remote = fetchLFSTestRepo(branch);
         gitClient.checkout().branch(branch).ref(remote + "/" + branch).execute();
     }
 
-    // If LFS installed and not enabled, checkout content without download
+    // If LFS not installed and not enabled, checkout content without download
     @Issue("JENKINS-35687") // Git LFS support
     @Test
     public void testCheckoutWithoutLFSWhenLFSNotAvailable() throws Exception {
-        assumeFalse(CLI_GIT_HAS_GIT_LFS);
+        if (CLI_GIT_HAS_GIT_LFS || CLI_GIT_HAS_GIT_LFS_CONFIGURED) {
+            return;
+        }
         String branch = "tests/largeFileSupport";
         String remote = fetchLFSTestRepo(branch);
         gitClient.checkout().branch(branch).ref(remote + "/" + branch).execute();
         File uuidFile = new File(repoRoot, "uuid.txt");
-        String fileContent = FileUtils.readFileToString(uuidFile, "utf-8").trim();
+        String fileContent = Files.readString(uuidFile.toPath(), StandardCharsets.UTF_8).trim();
         String expectedContent = "version https://git-lfs.github.com/spec/v1\n"
                 + "oid sha256:75d122e4160dc91480257ff72403e77ef276e24d7416ed2be56d4e726482d86e\n"
                 + "size 33";
@@ -923,12 +1636,14 @@ public class GitClientTest {
     @Test(expected = GitException.class)
     public void testDeleteRefException() throws Exception {
         /* JGit won't delete current branch, CliGit will */
-        assumeThat(gitImplName, startsWith("jgit"));
+        if (!gitImplName.startsWith("jgit")) {
+            throw new GitException("Skipping JGit test in CLI git specific test testDeleteRefException");
+        }
         assertThat(gitClient.getRefNames(""), is(empty()));
-        commitOneFile(); // Creates commit on master branch
+        commitOneFile(); // Creates commit on default branch
         Set<String> refNames = gitClient.getRefNames("");
-        assertThat(refNames, hasItems("refs/heads/master"));
-        gitClient.deleteRef("refs/heads/master"); // Throws - JGit cannot delete current branch
+        assertThat(refNames, hasItems("refs/heads/" + defaultBranchName));
+        gitClient.deleteRef("refs/heads/" + defaultBranchName); // Throws - JGit cannot delete current branch
     }
 
     @Test
@@ -937,13 +1652,13 @@ public class GitClientTest {
 
         ObjectId commitA = commitOneFile();
         Map<String, ObjectId> headRevMapA = gitClient.getHeadRev(url);
-        assertThat(headRevMapA.keySet(), hasItems("refs/heads/master"));
-        assertThat(headRevMapA.get("refs/heads/master"), is(commitA));
+        assertThat(headRevMapA.keySet(), hasItems("refs/heads/" + defaultBranchName));
+        assertThat(headRevMapA.get("refs/heads/" + defaultBranchName), is(commitA));
 
         ObjectId commitB = commitOneFile();
         Map<String, ObjectId> headRevMapB = gitClient.getHeadRev(url);
-        assertThat(headRevMapB.keySet(), hasItems("refs/heads/master"));
-        assertThat(headRevMapB.get("refs/heads/master"), is(commitB));
+        assertThat(headRevMapB.keySet(), hasItems("refs/heads/" + defaultBranchName));
+        assertThat(headRevMapB.get("refs/heads/" + defaultBranchName), is(commitB));
     }
 
     @Test
@@ -951,10 +1666,10 @@ public class GitClientTest {
         String url = repoRoot.getAbsolutePath();
 
         ObjectId commitA = commitOneFile();
-        assertThat(gitClient.getHeadRev(url, "master"), is(commitA));
+        assertThat(gitClient.getHeadRev(url, defaultBranchName), is(commitA));
 
         ObjectId commitB = commitOneFile();
-        assertThat(gitClient.getHeadRev(url, "master"), is(commitB));
+        assertThat(gitClient.getHeadRev(url, defaultBranchName), is(commitB));
     }
 
     @Test(expected = GitException.class)
@@ -1015,9 +1730,9 @@ public class GitClientTest {
     @Test
     public void testRevParse() throws Exception {
         ObjectId commitA = commitOneFile();
-        assertThat(gitClient.revParse("master"), is(commitA));
+        assertThat(gitClient.revParse(defaultBranchName), is(commitA));
         ObjectId commitB = commitOneFile();
-        assertThat(gitClient.revParse("master"), is(commitB));
+        assertThat(gitClient.revParse(defaultBranchName), is(commitB));
     }
 
     @Test(expected = GitException.class)
@@ -1035,7 +1750,7 @@ public class GitClientTest {
         assertThat(resultAll, contains(commitA));
 
         List<ObjectId> resultRef = new ArrayList<>();
-        gitClient.revList_().to(resultRef).reference("master").execute();
+        gitClient.revList_().to(resultRef).reference(defaultBranchName).execute();
         assertThat(resultRef, contains(commitA));
     }
 
@@ -1059,23 +1774,25 @@ public class GitClientTest {
     @Test
     public void testRevList() throws Exception {
         ObjectId commitA = commitOneFile();
-        assertThat(gitClient.revList("master"), contains(commitA));
+        assertThat(gitClient.revList(defaultBranchName), contains(commitA));
         /* Also test RevListCommand implementation */
         List<ObjectId> resultA = new ArrayList<>();
-        gitClient.revList_().to(resultA).reference("master").execute();
+        gitClient.revList_().to(resultA).reference(defaultBranchName).execute();
         assertThat(resultA, contains(commitA));
 
         ObjectId commitB = commitOneFile();
-        assertThat(gitClient.revList("master"), contains(commitB, commitA));
+ assertThat(gitClient.revList(defaultBranchName), contains(commitB, commitA));
         /* Also test RevListCommand implementation */
         List<ObjectId> resultB = new ArrayList<>();
-        gitClient.revList_().to(resultB).reference("master").execute();
+        gitClient.revList_().to(resultB).reference(defaultBranchName).execute();
         assertThat(resultB, contains(commitB, commitA));
     }
 
     @Test
     public void testRevListNoWalk() throws Exception {
-        assumeTrue(CLI_GIT_SUPPORTS_REV_LIST_NO_WALK);
+        if (!CLI_GIT_SUPPORTS_REV_LIST_NO_WALK) {
+            return;
+        }
         ObjectId commitA = commitOneFile();
         List<ObjectId> resultA = new ArrayList<>();
         gitClient.revList_().to(resultA).reference(commitA.name()).nowalk(true).execute();
@@ -1091,7 +1808,7 @@ public class GitClientTest {
     }
 
     // @Test
-    public void testSubGit() throws Exception {
+    public void testSubGit() {
         // Tested in assertSubmoduleContents
     }
 
@@ -1201,8 +1918,11 @@ public class GitClientTest {
     @Issue("JENKINS-37495") // submodule update fails if path and name differ
     @Test
     public void testSubmoduleUpdateRecursiveRenameModule() throws Exception {
-        assumeThat(gitImplName, is("git")); // JGit implementation doesn't handle renamed submodules
-        assumeTrue(CLI_GIT_SUPPORTS_SUBMODULE_RENAME);
+        // JGit implementation doesn't handle renamed submodules
+        if (!gitImplName.equals("git") || !CLI_GIT_SUPPORTS_SUBMODULE_RENAME || isWindows()) {
+            /* Slow test that does not tell us much more on Windows than Linux */
+            return;
+        }
         String branch = "tests/getSubmodules";
         String remote = fetchUpstream(branch);
         gitClient.checkout().branch(branch).ref(remote + "/" + branch).execute();
@@ -1221,8 +1941,11 @@ public class GitClientTest {
     @Issue("JENKINS-37495") // submodule update fails if path and name differ
     @Test
     public void testSubmoduleRenameModuleUpdateRecursive() throws Exception {
-        assumeThat(gitImplName, is("git")); // JGit implementation doesn't handle renamed submodules
-        assumeTrue(CLI_GIT_SUPPORTS_SUBMODULE_RENAME);
+        // JGit implementation doesn't handle renamed submodules
+        if (!gitImplName.equals("git") || !CLI_GIT_SUPPORTS_SUBMODULE_RENAME || isWindows()) {
+            /* Slow test that does not tell us much more on Windows than Linux */
+            return;
+        }
         String branch = "tests/getSubmodules";
         String remote = fetchUpstream(branch);
         gitClient.checkout().branch(branch).ref(remote + "/" + branch).execute();
@@ -1247,7 +1970,7 @@ public class GitClientTest {
         File lastModifiedFile = null;
         for (File file : repoRoot.listFiles()) {
             if (file.isFile()) {
-                try (PrintWriter writer = new PrintWriter(new OutputStreamWriter(Files.newOutputStream(file.toPath()), "UTF-8"), true)) {
+                try (PrintWriter writer = new PrintWriter(new OutputStreamWriter(Files.newOutputStream(file.toPath()), StandardCharsets.UTF_8), true)) {
                     writer.print(randomString);
                 }
                 lastModifiedFile = file;
@@ -1261,7 +1984,7 @@ public class GitClientTest {
         lastModifiedFile = null;
         for (File file : repoRoot.listFiles()) {
             if (file.isFile()) {
-                List<String> lines = Files.readAllLines(file.toPath(), Charset.forName("UTF-8"));
+                List<String> lines = Files.readAllLines(file.toPath(), StandardCharsets.UTF_8);
                 for (String line : lines) {
                     if (line.contains(randomString)) {
                         lastModifiedFile = file;
@@ -1384,7 +2107,10 @@ public class GitClientTest {
     @Issue("JENKINS-37419") // Git plugin checking out non-existent submodule from different branch
     @Test
     public void testOutdatedSubmodulesNotRemoved() throws Exception {
-        assumeTrue(CLI_GIT_SUPPORTS_SUBMODULE_DEINIT);
+        if (!CLI_GIT_SUPPORTS_SUBMODULE_DEINIT || isWindows()) {
+            /* Slow test that does not tell us much more on Windows than Linux */
+            return;
+        }
         String branch = "tests/getSubmodules";
         String[] expectedDirsWithRename = {"firewall", "ntp", "sshkeys"};
         String[] expectedDirsWithoutRename = {"firewall", "ntp"};
@@ -1394,6 +2120,7 @@ public class GitClientTest {
             expectedDirs = expectedDirsWithoutRename;
         }
         String remote = fetchUpstream(branch);
+        allowFileProtocol(gitClient);
         if (random.nextBoolean()) {
             gitClient.checkoutBranch(branch, remote + "/" + branch);
         } else {
@@ -1479,7 +2206,7 @@ public class GitClientTest {
             assertSubmoduleStatus(cloneGitClient, true, "ntp");
         }
 
-        /**
+        /*
          * With extra -f argument, git clean removes submodules
          */
         CliGitCommand cloneRepoCmd = new CliGitCommand(cloneGitClient);
@@ -1498,13 +2225,37 @@ public class GitClientTest {
         assertThat(branchNames, containsInAnyOrder(expectedBranchNames));
     }
 
+    /* Enable long paths in gitClient workspace if running on Windows.
+     * Assumes that the repository is at a directory path that is less
+     * than 256 characters and that the checkout operation will
+     * attempt to create a directory path greater than 256 characters.
+     */
+    private void enableLongPaths(GitClient gitClient) throws InterruptedException {
+        CliGitAPIImpl cliGitClient;
+        if (gitClient instanceof CliGitAPIImpl && isWindows()) {
+            /* Enable core.longpaths prior to fetch on Windows -
+             * testSubmodulesUsedFromOtherBranches submodule test will
+             * fail with default Windows location otherwise
+             */
+            cliGitClient = (CliGitAPIImpl) gitClient;
+            cliGitClient.launchCommand("config", "core.longpaths", "true");
+        }
+    }
+
     @Issue("JENKINS-37419") // Submodules from other branches are used in checkout
     @Test
     public void testSubmodulesUsedFromOtherBranches() throws Exception {
         /* Submodules not fully supported with JGit */
-        assumeThat(gitImplName, is("git")); // JGit implementation doesn't handle renamed submodules
+        // JGit implementation doesn't handle renamed submodules
+        if (!gitImplName.equals("git") || isWindows()) {
+            /* Slow test that does not tell us much more on Windows than Linux */
+            return;
+        }
         String oldBranchName = "tests/getSubmodules";
         String upstream = fetchUpstream(oldBranchName);
+        /* Enable long paths to prevent checkout failure on default Windows workspace with MSI installer */
+        enableLongPaths(gitClient);
+        allowFileProtocol(gitClient);
         if (random.nextBoolean()) {
             gitClient.checkoutBranch(oldBranchName, upstream + "/" + oldBranchName);
         } else {
@@ -1513,6 +2264,10 @@ public class GitClientTest {
         assertBranches(gitClient, oldBranchName);
         assertSubmoduleDirectories(gitClient, false, "firewall", "ntp", "sshkeys"); // No submodule init or update yet
 
+        if (isWindows() && repoRoot.getAbsolutePath().length() > 120) {
+            // Skip the test when long paths would break the test
+            return;
+        }
         /* Create tests/addSubmodules branch with one more module */
         String newBranchName = "tests/addSubmodules";
         String newDirName = "git-client-plugin-" + (10 + random.nextInt(90));
@@ -1569,17 +2324,29 @@ public class GitClientTest {
         assertTrue("Failed to create URL repo dir", urlRepoDir.mkdir());
         GitClient urlRepoClient = Git.with(TaskListener.NULL, new EnvVars()).in(urlRepoDir).using(gitImplName).getClient();
         urlRepoClient.init();
+        allowFileProtocol(urlRepoClient);
+        CliGitCommand gitCmd = new CliGitCommand(urlRepoClient);
+        gitCmd.run("config", "user.name", "Vojtěch GitClientTest Zweibrücken-Šafařík");
+        gitCmd.run("config", "user.email", "email.from.git.client@example.com");
         File readme = new File(urlRepoDir, "readme");
         String readmeText = "This repo includes .url in its directory name (" + random.nextInt() + ")";
         Files.write(Paths.get(readme.getAbsolutePath()), readmeText.getBytes());
         urlRepoClient.add("readme");
         urlRepoClient.commit("Added README to repo used as a submodule");
+        /* Enable long paths to prevent checkout failure on default Windows workspace with MSI installer */
+        enableLongPaths(urlRepoClient);
 
         // Add new repository as submodule to repository that ends in .url
         File repoHasSubmodule = new File(baseDir, "has-submodule.url");
         assertTrue("Failed to create repo dir that will have submodule", repoHasSubmodule.mkdir());
         GitClient repoHasSubmoduleClient = Git.with(TaskListener.NULL, new EnvVars()).in(repoHasSubmodule).using(gitImplName).getClient();
         repoHasSubmoduleClient.init();
+        gitCmd = new CliGitCommand(repoHasSubmoduleClient);
+        gitCmd.run("config", "user.name", "Vojtěch GitClientTest repo submodule Zweibrücken-Šafařík");
+        gitCmd.run("config", "user.email", "email.from.git.client@example.com");
+        /* Enable long paths to prevent checkout failure on default Windows workspace with MSI installer */
+        enableLongPaths(repoHasSubmoduleClient);
+        allowFileProtocol(repoHasSubmoduleClient);
         File hasSubmoduleReadme = new File(repoHasSubmodule, "readme");
         String hasSubmoduleReadmeText = "Repo has a submodule that includes .url in its directory name (" + random.nextInt() + ")";
         Files.write(Paths.get(hasSubmoduleReadme.getAbsolutePath()), hasSubmoduleReadmeText.getBytes());
@@ -1588,6 +2355,12 @@ public class GitClientTest {
         String moduleDirBaseName = "module.named.url";
         File modulesDir = new File(repoHasSubmodule, "modules");
         assertTrue("Failed to create modules dir in repoHasSubmodule", modulesDir.mkdir());
+
+        /* The test fails on Windows CLI git if modulesDir is more than about 200 characters, even with long paths enabled */
+        if (this.srcGitClient instanceof CliGitAPIImpl && isWindows() && modulesDir.getCanonicalPath().length() > 200) {
+            return;
+        }
+
         repoHasSubmoduleClient.addSubmodule(repoHasSubmodule.getAbsolutePath(), "modules/" + moduleDirBaseName);
         repoHasSubmoduleClient.add(".");
         repoHasSubmoduleClient.commit("Add modules/" + moduleDirBaseName + " as submodule");
@@ -1600,9 +2373,11 @@ public class GitClientTest {
         assertTrue("Failed to create clone dir", cloneDir.mkdir());
         GitClient cloneGitClient = Git.with(TaskListener.NULL, new EnvVars()).in(cloneDir).using(gitImplName).getClient();
         cloneGitClient.init();
+        allowFileProtocol(cloneGitClient);
         cloneGitClient.clone_().url(repoHasSubmodule.getAbsolutePath()).execute();
-        String branch = "master";
-        cloneGitClient.checkoutBranch(branch, "origin/" + branch);
+        cloneGitClient.checkoutBranch(defaultBranchName, "origin/" + defaultBranchName);
+        /* Enable long paths to prevent checkout failure on default Windows workspace with MSI installer */
+        enableLongPaths(cloneGitClient);
         cloneGitClient.submoduleInit();
         cloneGitClient.submoduleUpdate().recursive(false).execute();
         assertSubmoduleStatus(cloneGitClient, true, moduleDirBaseName);
@@ -1610,7 +2385,10 @@ public class GitClientTest {
 
     @Test
     public void testGetSubmodules() throws Exception {
-        assumeThat(gitImplName, is("git")); // JGit implementation doesn't handle renamed submodules
+        // JGit implementation doesn't handle renamed submodules
+        if (!gitImplName.equals("git")) {
+            return;
+        }
         String branchName = "tests/getSubmodules";
         String upstream = checkoutAndAssertHasGitModules(branchName, true);
         List<IndexEntry> submodules = gitClient.getSubmodules(branchName);
@@ -1624,7 +2402,10 @@ public class GitClientTest {
 
     @Test
     public void testFixSubmoduleUrls() throws Exception {
-        assumeThat(gitImplName, is("git")); // CliGit
+        // CliGit
+        if (!gitImplName.equals("git")) {
+            return;
+        }
         IGitAPI gitAPI = (IGitAPI) gitClient;
         String branchName = "tests/getSubmodules";
         String upstream = checkoutAndAssertHasGitModules(branchName, true);
@@ -1634,20 +2415,26 @@ public class GitClientTest {
     }
 
     @Test
-    public void testFixSubmoduleUrlsInvalidRemote() throws Exception {
-        assumeThat(gitImplName, is("git")); // CliGit
+    public void testFixSubmoduleUrlsInvalidRemote() {
+        // CliGit
+        if (!gitImplName.equals("git")) {
+            return;
+        }
         IGitAPI gitAPI = (IGitAPI) gitClient;
-        thrown.expect(GitException.class);
-        thrown.expectMessage("Could not determine remote");
-        gitAPI.fixSubmoduleUrls("invalid-remote", TaskListener.NULL);
+        GitException e = assertThrows(GitException.class,
+                                      () -> gitAPI.fixSubmoduleUrls("invalid-remote", TaskListener.NULL));
+        assertThat(e.getMessage(), containsString("Could not determine remote"));
     }
 
     @Test
-    public void testFixSubmoduleUrlsJGitUnsupported() throws Exception {
-        assumeThat(gitImplName, not(is("git"))); // JGit does not support fixSubmoduleUrls
+    public void testFixSubmoduleUrlsJGitUnsupported() {
+        // JGit does not support fixSubmoduleUrls
+        if (gitImplName.equals("git")) {
+            return;
+        }
         IGitAPI gitAPI = (IGitAPI) gitClient;
-        thrown.expect(UnsupportedOperationException.class);
-        gitAPI.fixSubmoduleUrls("origin", TaskListener.NULL);
+        assertThrows(UnsupportedOperationException.class,
+                     () -> gitAPI.fixSubmoduleUrls("origin", TaskListener.NULL));
     }
 
     private void assertStatusUntrackedContent(GitClient client, boolean expectUntrackedContent) throws Exception {
@@ -1660,7 +2447,7 @@ public class GitClientTest {
             }
             output.append(line);
         }
-        assertEquals("Untracked content: " + output.toString(), expectUntrackedContent, foundUntrackedContent);
+        assertEquals("Untracked content: " + output, expectUntrackedContent, foundUntrackedContent);
     }
 
     @Test
@@ -1673,7 +2460,8 @@ public class GitClientTest {
         }
         // Test may fail if updateSubmodule called with remoteTracking == true
         // and the remoteTracking argument is used in the updateSubmodule call
-        updateSubmodule(upstream, branchName, null);
+        boolean remoteTracking = false;
+        updateSubmodule(upstream, branchName, remoteTracking);
         assertSubmoduleDirectories(gitClient, true, "firewall", "ntp", "sshkeys");
         assertSubmoduleContents("firewall", "ntp", "sshkeys");
 
@@ -1797,24 +2585,28 @@ public class GitClientTest {
 
     @Test
     public void testgetRemoteSymbolicReferences_null() throws Exception {
-        assumeTrue(CLI_GIT_SUPPORTS_SYMREF);
+        if (!CLI_GIT_SUPPORTS_SYMREF) {
+            return;
+        }
         commitOneFile("A-Single-File-Commit");
         assertThat(gitClient.getRemoteSymbolicReferences(repoRoot.getAbsolutePath(), null),
-                hasEntry(Constants.HEAD, "refs/heads/master"));
+                hasEntry(Constants.HEAD, "refs/heads/" + defaultBranchName));
     }
 
     @Test
     public void testgetRemoteSymbolicReferences_null_old_git() throws Exception {
-        assumeFalse(CLI_GIT_SUPPORTS_SYMREF);
-        assumeThat(gitImplName, is("git"));
+        if (!gitImplName.equals("git") || CLI_GIT_SUPPORTS_SYMREF) {
+            return;
+        }
         commitOneFile("A-Single-File-Commit");
         assertThat(gitClient.getRemoteSymbolicReferences(repoRoot.getAbsolutePath(), null).keySet(), hasSize(0));
     }
 
     @Test
     public void testgetRemoteSymbolicReferences_null_old_git_use_jgit() throws Exception {
-        assumeFalse(CLI_GIT_SUPPORTS_SYMREF);
-        assumeThat(gitImplName, is(not("git")));
+        if (gitImplName.equals("git") || CLI_GIT_SUPPORTS_SYMREF) {
+            return;
+        }
         commitOneFile("A-Single-File-Commit");
         assertThat(gitClient.getRemoteSymbolicReferences(repoRoot.getAbsolutePath(), null),
                 hasEntry(Constants.HEAD, "refs/heads/master"));
@@ -1828,24 +2620,28 @@ public class GitClientTest {
 
     @Test
     public void testgetRemoteSymbolicReferences_with_matching_pattern() throws Exception {
-        assumeTrue(CLI_GIT_SUPPORTS_SYMREF);
+        if (!CLI_GIT_SUPPORTS_SYMREF) {
+            return;
+        }
         commitOneFile("A-Single-File-Commit");
         assertThat(gitClient.getRemoteSymbolicReferences(repoRoot.getAbsolutePath(), Constants.HEAD),
-                hasEntry(Constants.HEAD, "refs/heads/master"));
+                hasEntry(Constants.HEAD, "refs/heads/" + defaultBranchName));
     }
 
     @Test
     public void testgetRemoteSymbolicReferences_with_matching_pattern_old_git() throws Exception {
-        assumeFalse(CLI_GIT_SUPPORTS_SYMREF);
-        assumeThat(gitImplName, is("git"));
+        if (!gitImplName.equals("git") || CLI_GIT_SUPPORTS_SYMREF) {
+            return;
+        }
         commitOneFile("A-Single-File-Commit");
         assertThat(gitClient.getRemoteSymbolicReferences(repoRoot.getAbsolutePath(), Constants.HEAD).keySet(), hasSize(0));
     }
 
     @Test
     public void testgetRemoteSymbolicReferences_with_matching_pattern_old_git_with_jgit() throws Exception {
-        assumeFalse(CLI_GIT_SUPPORTS_SYMREF);
-        assumeThat(gitImplName, is(not("git")));
+        if (gitImplName.equals("git") || CLI_GIT_SUPPORTS_SYMREF) {
+            return;
+        }
         commitOneFile("A-Single-File-Commit");
         assertThat(gitClient.getRemoteSymbolicReferences(repoRoot.getAbsolutePath(), Constants.HEAD),
                 hasEntry(Constants.HEAD, "refs/heads/master"));
@@ -1853,7 +2649,9 @@ public class GitClientTest {
 
     @Test
     public void testgetRemoteSymbolicReferences_with_non_default_HEAD() throws Exception {
-        assumeTrue(CLI_GIT_SUPPORTS_SYMREF);
+        if (!CLI_GIT_SUPPORTS_SYMREF) {
+            return;
+        }
         commitOneFile("A-Single-File-Commit");
 
         CliGitCommand gitCmd = new CliGitCommand(gitClient);
@@ -1873,21 +2671,25 @@ public class GitClientTest {
 
     @Test(expected = GitException.class)
     public void testgetRemoteSymbolicReferences_URI_Syntax() throws Exception {
-        assumeTrue(CLI_GIT_SUPPORTS_SYMREF);
+        if (!CLI_GIT_SUPPORTS_SYMREF) {
+            throw new GitException("Skipping JGit tests in testgetRemoteSymbolicReferences_URI_Syntax");
+        }
         gitClient.getRemoteSymbolicReferences("error: invalid repo URL", Constants.HEAD);
     }
 
     @Test(expected = GitException.class)
     public void testgetRemoteSymbolicReferences_URI_Syntax_old_jgit() throws Exception {
-        assumeFalse(CLI_GIT_SUPPORTS_SYMREF);
-        assumeThat(gitImplName, is(not("git")));
+        if (gitImplName.equals("git") || CLI_GIT_SUPPORTS_SYMREF) {
+            throw new GitException("Skipping JGit tests in testgetRemoteSymbolicReferences_URI_Syntax_old_jgit");
+        }
         gitClient.getRemoteSymbolicReferences("error: invalid repo URL", Constants.HEAD);
     }
 
     @Test
     public void testgetRemoteSymbolicReferences_URI_Syntax_old_git() throws Exception {
-        assumeFalse(CLI_GIT_SUPPORTS_SYMREF);
-        assumeThat(gitImplName, is("git"));
+        if (!gitImplName.equals("git") || CLI_GIT_SUPPORTS_SYMREF) {
+            return;
+        }
         assertThat(gitClient.getRemoteSymbolicReferences(repoRoot.getAbsolutePath(), Constants.HEAD).keySet(), hasSize(0));
     }
 
@@ -2024,6 +2826,291 @@ public class GitClientTest {
         tags = gitClient.getTags();
         assertThat(tags, not(hasItems(updatedTag)));
         assertThat(tags, hasItems(tag));
+    }
+
+    // Tests ported from CliGitAPIImplTest
+    @Test
+    public void test_git_version_debian_wheezy() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 7, 10, 4),
+                new CliGitAPIImplTest.VersionTest(true, 1, 7, 10, 3),
+                new CliGitAPIImplTest.VersionTest(false, 1, 7, 10, 5)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.7.10.4", versions);
+    }
+
+    @Test
+    public void test_git_version_debian_testing() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 2, 0, 1, 0),
+                new CliGitAPIImplTest.VersionTest(true, 2, 0, 0, 0),
+                new CliGitAPIImplTest.VersionTest(false, 2, 0, 2, 0),
+                new CliGitAPIImplTest.VersionTest(false, 2, 1, 0, 0)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 2.0.1", versions);
+    }
+
+    @Test
+    public void test_git_version_debian_testing_old() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 2, 0, 0, 0),
+                new CliGitAPIImplTest.VersionTest(true, 1, 9, 99, 99),
+                new CliGitAPIImplTest.VersionTest(false, 2, 0, 1, 0)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 2.0.0.rc0", versions);
+        cliGitAPIImplTest.assertVersionOutput("git version 2.0.0.rc2", versions);
+        cliGitAPIImplTest.assertVersionOutput("git version 2.0.0", versions);
+        cliGitAPIImplTest.assertVersionOutput("git version 2.0", versions); // mythical version
+        cliGitAPIImplTest.assertVersionOutput("git version 2", versions);   // mythical version
+    }
+
+    @Test
+    public void test_git_version_debian_testing_older() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 9, 0, 0),
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 99, 99),
+                new CliGitAPIImplTest.VersionTest(false, 1, 9, 1, 0)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.9.0", versions);
+    }
+
+    @Test
+    public void test_git_version_windows_1800() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 0, 0),
+                new CliGitAPIImplTest.VersionTest(true, 1, 7, 99, 0),
+                new CliGitAPIImplTest.VersionTest(false, 1, 8, 1, 0)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.8.0.msysgit.0", versions);
+    }
+
+    @Test
+    public void test_git_version_windows_1840() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 4, 0),
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 3, 99),
+                new CliGitAPIImplTest.VersionTest(false, 1, 8, 4, 1)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.8.4.msysgit.0", versions);
+    }
+
+    @Test
+    public void test_git_version_windows_1852() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 5, 2),
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 5, 1),
+                new CliGitAPIImplTest.VersionTest(false, 1, 8, 5, 3)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.8.5.2.msysgit.0", versions);
+    }
+
+    @Test
+    public void test_git_version_windows_1900() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 9, 0, 0),
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 99, 0),
+                new CliGitAPIImplTest.VersionTest(false, 1, 9, 0, 1)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.9.0.msysgit.0", versions);
+    }
+
+    @Test
+    public void test_git_version_windows_1920() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 9, 2, 0),
+                new CliGitAPIImplTest.VersionTest(true, 1, 9, 1, 99),
+                new CliGitAPIImplTest.VersionTest(false, 1, 9, 2, 1)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.9.2.msysgit.0", versions);
+    }
+
+    @Test
+    public void test_git_version_windows_1940() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 9, 4, 0),
+                new CliGitAPIImplTest.VersionTest(true, 1, 9, 3, 99),
+                new CliGitAPIImplTest.VersionTest(false, 1, 9, 4, 1)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.9.4.msysgit.0", versions);
+    }
+
+    @Test
+    public void test_git_version_windows_2501() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 2, 5, 0, 1),
+                new CliGitAPIImplTest.VersionTest(true, 2, 5, 0, 0),
+                new CliGitAPIImplTest.VersionTest(false, 2, 5, 0, 2)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 2.5.0.windows.1", versions);
+    }
+
+    @Test
+    public void test_git_version_windows_2_10_1_1() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 2, 10, 1, 1),
+                new CliGitAPIImplTest.VersionTest(true, 2, 10, 1, 0),
+                new CliGitAPIImplTest.VersionTest(true, 2, 10, 0, 1),
+                new CliGitAPIImplTest.VersionTest(false, 2, 10, 1, 2),
+                new CliGitAPIImplTest.VersionTest(false, 2, 10, 2, 0)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 2.10.1.windows.1", versions);
+    }
+
+    @Test
+    public void test_git_version_redhat_5() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 2, 1),
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 2, 0),
+                new CliGitAPIImplTest.VersionTest(false, 1, 8, 2, 2)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.8.2.1", versions);
+    }
+
+    @Test
+    public void test_git_version_redhat_65() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 7, 1, 0),
+                new CliGitAPIImplTest.VersionTest(true, 1, 7, 0, 99),
+                new CliGitAPIImplTest.VersionTest(false, 1, 7, 1, 1),
+                new CliGitAPIImplTest.VersionTest(false, 1, 7, 2, 0)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.7.1", versions);
+    }
+
+    @Test
+    public void test_git_version_opensuse_13() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 4, 5),
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 4, 4),
+                new CliGitAPIImplTest.VersionTest(false, 1, 8, 4, 6)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.8.4.5", versions);
+    }
+
+    @Test
+    public void test_git_version_ubuntu_13() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 3, 2),
+                new CliGitAPIImplTest.VersionTest(true, 1, 8, 3, 1),
+                new CliGitAPIImplTest.VersionTest(false, 1, 8, 3, 3)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 1.8.3.2", versions);
+    }
+
+    @Test
+    public void test_git_version_ubuntu_14_04_ppa() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 2, 2, 2, 0),
+                new CliGitAPIImplTest.VersionTest(true, 2, 2, 1, 0),
+                new CliGitAPIImplTest.VersionTest(false, 2, 2, 3, 0)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 2.2.2", versions);
+    }
+
+    @Test
+    public void test_git_version_ubuntu_14_04_ppa_2_3_0() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 2, 3, 0, 0),
+                new CliGitAPIImplTest.VersionTest(true, 2, 2, 9, 0),
+                new CliGitAPIImplTest.VersionTest(false, 2, 3, 1, 0)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 2.3.0", versions);
+    }
+
+    @Test
+    public void test_git_version_ubuntu_14_04_ppa_2_3_5() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        CliGitAPIImplTest.VersionTest[] versions = {
+                new CliGitAPIImplTest.VersionTest(true, 2, 3, 5, 0),
+                new CliGitAPIImplTest.VersionTest(true, 2, 2, 9, 9),
+                new CliGitAPIImplTest.VersionTest(false, 2, 3, 5, 1),
+                new CliGitAPIImplTest.VersionTest(false, 2, 4, 0, 0),
+                new CliGitAPIImplTest.VersionTest(false, 3, 0, 0, 0)
+        };
+        cliGitAPIImplTest.assertVersionOutput("git version 2.3.5", versions);
+    }
+
+    @Test
+    public void test_git_ssh_executable_found_on_windows() {
+        if (!gitImplName.equals("git") || !isWindows()) {
+            return;
+        }
+        cliGitAPIImplTest.setTimeoutVisibleInCurrentTest(false);
+
+        CliGitAPIImpl git = new CliGitAPIImpl("git", new File("."), cliGitAPIImplTest.listener, cliGitAPIImplTest.env);
+        assertTrue("ssh.exe not found", git.getSSHExecutable().exists());
+    }
+
+    @Test
+    public void test_git_branch_with_line_breaks_and_long_strings() {
+        if (!gitImplName.equals("git")) {
+            return;
+        }
+        String gitBranchOutput =
+                "* (HEAD detached at b297853)  b297853e667d5989801937beea30fcec7d1d2595 Commit message with line breaks\r very-long-string-with-more-than-44-characters\n" +
+                        "  remotes/origin/master       e0d3f46c4fdb8acd068b6b127356931411d16e23 Commit message with line breaks\r very-long-string-with-more-than-44-characters and some more text\n" +
+                        "  remotes/origin/develop      fc8996efc1066d9dae529e5187800f84995ca56f Single-line commit message\n";
+
+        cliGitAPIImplTest.setTimeoutVisibleInCurrentTest(false);
+        CliGitAPIImpl git = new CliGitAPIImpl("git", new File("."), cliGitAPIImplTest.listener, cliGitAPIImplTest.env);
+        Set<Branch> branches = git.parseBranches(gitBranchOutput);
+        assertEquals("\"git branch -a -v --no-abbrev\" output correctly parsed", 2, branches.size());
     }
 
     private boolean isWindows() {
